Revise README for project structure and instructions
Updated project structure and manual run instructions in README.